clusters/platform/wave-5-platform/coder/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder
  namespace: coder
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`coder.platform.the-lab.zone`)
      kind: Rule
      services:
        - name: coder
          port: 80
  tls:
    secretName: platform-wildcard-tls
